Let overflowing code blocks have scrollbar and prevent user from adding new lines in prompt text area if it only contains whitespace or is empty

--- a/frontend/src/pages/ChatPage.css
+++ b/frontend/src/pages/ChatPage.css
@@ -303,6 +303,8 @@ body {
 
     pre {
         padding: 5px 15px 10px 15px;
+        overflow-x: auto;
+        overflow-y: hidden;
     }
 
     .code-block-header-div {
